# advanced_task-manager_fast_api

./: .env  .gitignore  base-compose.yaml  docker-compose.yaml  pyproject.toml  snapshot-backup.sh  test.py
app/: capture-traffic-docker-compose.yaml  client.py  database.py  docker-compose.yaml  main.py  schemas.py  services.py  task_manager.Dockerfile  tasks.py  test.py
location/: database.py  docker-compose.yaml  locations.Dockerfile  main.py  schemas.py  services.py
monitoring/: alerts.yaml  docker-compose.yaml  prometheus.yaml
stream/: docker-compose.yaml  main.py  stream.Dockerfile
