[tool.poetry]
name = "docker-book"
version = "0.1.0"
description = ""
authors = ["\"d\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
redis = "^5.1.1"
fastapi = "^0.115.2"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
aioredis = "^2.0.1"
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
